fixed viewport scaling on mobile #2

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
     html {
         height: 100%;
-        width: 100%;
     }
     
     body {
